[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Stone1.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Stone2.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Stone3.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Stone4.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Stone5.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/SmallStones.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Torii.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Pagoda2.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Mountain.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Sakura.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Sakura2.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/MountainPiece.tscn" type="PackedScene" id=15]

[node name="Game" type="Spatial"]

script = ExtResource( 1 )

[node name="Ground" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0227856, -0.50924, 0.00703907 )

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.524195, 0 )
_sections_unfolded = [ "Transform" ]
critical_hit_chance = 0

[node name="Stones" type="Spatial" parent="." index="2"]

_sections_unfolded = [ "Transform" ]

[node name="Stone1" parent="Stones" index="0" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 0.986418, -0.164254, 0, 0.164254, 0.986418, -12.9569, -0.632354, 8.11546 )

[node name="Stone2" parent="Stones" index="1" instance=ExtResource( 5 )]

transform = Transform( -0.991796, 0, -0.127829, 0.018711, 0.98923, -0.145174, 0.126452, -0.146374, -0.981114, 9.78074, -0.097313, 6.70415 )

[node name="Stone7" parent="Stones" index="2" instance=ExtResource( 5 )]

transform = Transform( -0.992382, -0.11823, -0.0346436, 0.110948, -0.97988, 0.165909, -0.0535616, 0.160801, 0.985533, -6.07315, -0.230646, 2.37221 )

[node name="Stone3" parent="Stones" index="3" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.6665, -0.642834, -8.72086 )

[node name="Stone4" parent="Stones" index="4" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.72999, -0.386527, -12.1869 )

[node name="Stone5" parent="Stones" index="5" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.512804, -0.501797, 13.4359 )

[node name="Stone6" parent="Stones" index="6" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, -0.981615, -0.190872, 0, 0.190872, -0.981615, -9.72994, 0.519644, -9.74584 )

[node name="SmallStones" parent="Stones" index="7" instance=ExtResource( 9 )]

transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 4.09835, -0.612391, 2.2476 )
_sections_unfolded = [ "Transform" ]

[node name="SmallStones2" parent="Stones" index="8" instance=ExtResource( 9 )]

transform = Transform( -0.0280568, 0, 0.298685, 0, 0.3, 0, -0.298685, 0, -0.0280568, -5.39522, -0.521545, -3.39104 )
_sections_unfolded = [ "Transform" ]

[node name="Gates" type="Spatial" parent="." index="3"]

editor/display_folded = true

[node name="Torii" parent="Gates" index="0" instance=ExtResource( 10 )]

transform = Transform( 0.892894, 0, -0.80171, 0, 1.2, 0, 0.80171, 0, 0.892894, 11.6742, -0.567683, -13.1827 )
_sections_unfolded = [ "Transform" ]

[node name="Torii2" parent="Gates" index="1" instance=ExtResource( 10 )]

transform = Transform( -0.91105, 0, -0.781018, 0, 1.2, 0, 0.781018, 0, -0.91105, -9.25626, -0.563884, -15.9636 )
_sections_unfolded = [ "Transform" ]

[node name="Torii3" parent="Gates" index="2" instance=ExtResource( 10 )]

transform = Transform( 0.895261, 0, 0.799067, 0, 1.2, 0, -0.799067, 0, 0.895261, 11.084, -0.462783, 11.4704 )
_sections_unfolded = [ "Transform" ]

[node name="Torii4" parent="Gates" index="3" instance=ExtResource( 10 )]

transform = Transform( 0.807198, 0, -0.887937, 0, 1.2, 0, 0.887937, 0, 0.807198, -8.75468, -0.516485, 13.492 )
_sections_unfolded = [ "Transform" ]

[node name="Torii5" parent="Gates" index="4" instance=ExtResource( 10 )]

transform = Transform( -0.446897, 0, -1.11368, 0, 1.2, 0, 1.11368, 0, -0.446897, -15.521, -0.552037, -1.63547 )
_sections_unfolded = [ "Transform" ]

[node name="SpawnPoints" type="Spatial" parent="." index="4"]

editor/display_folded = true

[node name="SpawnPoint1" type="Position3D" parent="SpawnPoints" index="0"]

transform = Transform( 1, 0, 0, 0, 0.998598, 0.0529387, 0, -0.0529387, 0.998598, -7.93016, -0.1271, -13.9838 )

[node name="SpawnPoint2" type="Position3D" parent="SpawnPoints" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1253, -0.309489, -11.1006 )

[node name="SpawnPoint3" type="Position3D" parent="SpawnPoints" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1359, -0.158282, 10.3327 )

[node name="SpawnPoint4" type="Position3D" parent="SpawnPoints" index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.75268, -0.192998, 12.4897 )

[node name="SpawnPoint5" type="Position3D" parent="SpawnPoints" index="4"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.1196, -0.291686, -1.20222 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="5"]

transform = Transform( -0.134875, 0.869096, 0.475899, 0.119765, -0.462468, 0.87851, 0.983598, 0.175485, -0.0417118, 15.5195, 15.0856, -8.93511 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 0
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Directional Shadow", "Shadow" ]

[node name="Pagoda2" parent="." index="6" instance=ExtResource( 11 )]

transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 15.0279, -0.426601, 0.253107 )
_sections_unfolded = [ "Transform" ]

[node name="Mountain" parent="." index="7" instance=ExtResource( 12 )]

transform = Transform( 0.15, 0, 0, 0, 0.2, 0, 0, 0, 0.15, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Sakura" parent="." index="8" instance=ExtResource( 13 )]

transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 5.00991, -0.458962, 13.9887 )
_sections_unfolded = [ "Transform" ]

[node name="Sakura2" parent="." index="9" instance=ExtResource( 14 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.3207, -0.5128, -3.79085 )

[node name="MountainPiece" parent="." index="10" instance=ExtResource( 15 )]

transform = Transform( 0.0640883, 0, -0.997944, 0, 1, 0, 0.997944, 0, 0.0640883, 22, 0, -22 )

[node name="MountainPiece2" parent="." index="11" instance=ExtResource( 15 )]

transform = Transform( 0.0640883, 0, -0.997944, 0, 1, 0, 0.997944, 0, 0.0640883, -24.454, -0.0181122, -21.2765 )
_sections_unfolded = [ "Transform" ]

[node name="MountainPiece3" parent="." index="12" instance=ExtResource( 15 )]

transform = Transform( 0.0640883, 0, -0.997944, 0, 1, 0, 0.997944, 0, 0.0640883, -18.773, 0, 25.5819 )

[node name="MountainPiece4" parent="." index="13" instance=ExtResource( 15 )]

transform = Transform( 0.0640883, 0, -0.997944, 0, 1, 0, 0.997944, 0, 0.0640883, 24.4572, 0, 21.7146 )

[connection signal="input_event" from="Ground" to="." method="_on_Ground_input_event"]

[connection signal="death" from="Player" to="." method="_on_Player_death"]


